# healthcare-risk-prediction-and-clinical-analytics-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MODEL_CARD.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-ci.txt  requirements.txt
backend/app/: config.py  database.py  main.py  ml.py  models.py  schemas.py  security.py
backend/app/services/: __init__.py  evaluation.py  feature_engineering.py  model_evaluation.py  model_registry.py  risk_models.py  seed_loader.py  summaries.py  survival_analysis.py  training.py
backend/tests/: test_api.py  test_api_coverage.py  test_evaluation_service.py  test_ml_unit.py  test_risk_models_service.py  test_scripts.py  test_security.py  test_summaries_service.py  test_training_service.py
docs/: api.md  architecture.md  demo-runbook.md  demo-script.md  deployment.md  hipaa-design-notes.md  resume-bullets.md
docs/preview/: index.html
docs/screenshots/: README.md
frontend/: .env.example  Dockerfile  eslint.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx  SurvivalCurveChart.tsx
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  PatientDetailPage.jsx  PatientsPage.jsx  RiskAnalysisPage.jsx  TriagePage.jsx
scripts/: bootstrap_demo.sh  fairness_eval.py  predict_cli.py
tests/: test_smoke.py
