[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-ai-backend"
version = "0.1.0"
description = "Nova AI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "PyJWT>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "scikit-learn>=1.5.1",
  "xgboost==2.1.1",
  "shap==0.46.0",
  "numpy>=1.26.4",
  "lifelines>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
